--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 SECRET_KEY='2hid6obNDC6BdIp4WIefdtu4KNdWnpUSqZ'
 
-SQLITE_DATABASE_URL='instance/database.db'
+SQLITE_DATABASE_URI=sqlite:///instance/database.db
